--- a/src/main/resources/templates/subscriber/index.html
+++ b/src/main/resources/templates/subscriber/index.html
@@ -2,33 +2,45 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Subscriber List</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1>Welcome to Our Awesome Site!</h1>
     <h3>Subscribe to our List. Sign-up below!</h3>
 
- 
     <p>Please use the form below to sign up as a subscriber:</p>
-        <form action="#" th:action="@{/}" th:object="${subscriber}" method="post">
-        <table>
-        <tr>
-            <td>First Name:</td>
-            <td><input type="text" th:field="*{firstName}" /></td>
-        </tr>
-        <tr>
-            <td>Last Name:</td>
-            <td><input type="text" th:field="*{lastName}" /></td>
-        </tr>
-        <tr>
-            <td>Username:</td>
-            <td><input type="text" th:field="*{userName}" /></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit Your Name</button></td>
-        </tr>
-        </table>
+    <form action="#" th:action="@{/}" th:object="${subscriber}" method="post">
+      <div class="form-group">
+        <label for="exampleFirstName1">First Name</label>
+        <input type="text" th:field="*{firstName}" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputLastName">Last Name</label>
+        <input type="text" th:field="*{lastName}" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputUserName">Username</label>
+        <input type="text" th:field="*{userName}" class="form-control" />
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-        
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
